# kairos

./: .env  .gitignore  Cargo.toml  DEMO.adoc  README.md  cargo-update-workspaces.sh  deposit-session-optimized.wasm  docker-compose.yaml  flake.nix
api-service/: Cargo.toml  rust-toolchain.toml
api-service/src/: main.rs  tests.rs
casper-deploy-notifier/: Cargo.toml
casper-deploy-notifier/examples/: echo_demo.rs
casper-deploy-notifier/src/: error.rs  lib.rs  main.rs  sse_types.rs  types.rs
casper-deploy-notifier/tests/: casper-deploy-notifier.rs
casper-sse-client/: Cargo.toml
casper-sse-client/src/: lib.rs  main.rs  sse_types.rs
contracts/: Cargo.toml
contracts/contract-types/: Cargo.toml
contracts/contract-types/src/: lib.rs
contracts/deposit-contract-tests/: .env  Cargo.toml
contracts/deposit-contract-tests/src/: integration_tests.rs  test_fixture.rs
contracts/deposit-contract-tests/tests/: integration_tests.rs  lib.rs
contracts/deposit-contracts/: Cargo.toml  build-contracts.sh  readme.md
contracts/deposit-contracts/contract/: Cargo.toml
contracts/deposit-contracts/deposit-session/: Cargo.toml
contracts/deposit-contracts/malicious-reader/: Cargo.toml
contracts/deposit-contracts/malicious-session/: Cargo.toml
contracts/deposit-contracts/withdrawal-session/: Cargo.toml
contracts/verifier-contract/: Cargo.toml  build-contract.sh
contracts/verifier-contract-tests/: .env  Cargo.toml
contracts/verifier-contract-tests/src/: integration_tests.rs  test_fixture.rs
contracts/verifier-contract/src/: constants.rs  error.rs  main.rs
database/: .env  Cargo.toml  README.md
database/migrations/2024-03-06-125417_create_deposits/: up.sql
database/migrations/2024-03-06-125552_create_transfers/: down.sql  up.sql
database/migrations/2024-03-06-125651_create_withdrawal/: up.sql
database/src/: lib.rs  models.rs  schema.rs
demo-contract-tests/: Cargo.toml
demo-contract-tests/tests/: integration_tests.rs
demo-contract-tests/tests/test_fixture/: mod.rs  wasm_helper.rs
demo-contract-tests/tests/testdata/: proof-from-server.json  proptest_prove_batches-proof-journal-349be3cb5fcb1f3b.json  proptest_prove_batches-proof-journal-3673e712f7cc58df.json  proptest_prove_batches-proof-journal-517453938a5b4f3e.json  proptest_prove_batches-proof-journal-52945c21c49e8ca6.json  proptest_prove_batches-proof-journal-5740dd3acc487c8.json  proptest_prove_batches-proof-journal-7d8dadeda4c1eb1c.json  proptest_prove_batches-proof-journal-81e981fd453114e.json  proptest_prove_batches-proof-journal-9a85f9117f0bf3a8.json  proptest_prove_batches-proof-journal-a0f9d7bffc979d80.json  proptest_prove_batches-proof-journal-a2821bb3813201f2.json  proptest_prove_batches-proof-journal-a53b58a9cf37e50e.json  proptest_prove_batches-proof-journal-aaa199403a3a669f.json  proptest_prove_batches-proof-journal-c77eac1aed36d104.json  test_prove_simple_batches_0.json  (+3 more)
host/: Cargo.toml
host/src/: lib.rs  main.rs
kairos-circuit-logic/: Cargo.toml
kairos-circuit-logic/src/: account_trie.rs  lib.rs  transactions.rs
kairos-cli/: Cargo.toml  build.rs
kairos-cli/src/: client.rs  error.rs  lib.rs  utils.rs
kairos-cli/tests/: cli_tests.rs
kairos-common-types/: Cargo.toml
kairos-common-types/src/: lib.rs  transactions.rs
kairos-contract-cli/: Cargo.toml  README.md
kairos-contract-cli/src/: cli.rs  deployments.rs  lib.rs  main.rs
kairos-contracts/: Cargo.toml  rust-toolchain.toml
kairos-contracts/demo-contract-tests/: Cargo.toml
kairos-contracts/deposit-contract-tests/: Cargo.toml
kairos-crypto/: Cargo.toml
kairos-crypto/src/: error.rs  lib.rs
kairos-data/: Cargo.toml
kairos-data/src/: errors.rs  lib.rs  schema.rs  transaction.rs
kairos-deposit-contract-tests/: Cargo.toml
kairos-deposit-contract-tests/src/: integration_tests.rs  test_fixture.rs
kairos-e2e/: Cargo.toml  README.md
kairos-e2e/src/: lib.rs  tests.rs
kairos-e2e/tests/: kairos-e2e.rs
kairos-l1-state-replicator/: Cargo.toml
kairos-l1-state-replicator/examples/: cep78_demo.rs
kairos-l1-state-replicator/src/: cep78_events.rs  error.rs  lib.rs  main.rs  parser.rs  rpc.rs  rpc_id.rs  utils.rs
kairos-l1-utils/: Cargo.toml
kairos-l1-utils/src/: lib.rs
kairos-l1-utils/tests/: kairos-l1-utils.rs  tests.rs
kairos-prover/: .env  Cargo.toml  README.md  default.nix
kairos-prover-server-lib/: Cargo.toml
kairos-prover-server-lib/src/: lib.rs
kairos-prover/host/: Cargo.toml
kairos-prover/kairos-circuit-logic/: Cargo.toml
kairos-prover/kairos-prover-risc0-server/: Cargo.toml  proptest_prove_batches-proof-journal-8379959845f0792.json  test_prove_simple_batches_0.json  test_prove_simple_batches_1.json
kairos-prover/kairos-types/: Cargo.toml
kairos-prover/kairos-verifier-risc0-lib/: Cargo.toml
kairos-prover/methods/: Cargo.toml  build.rs  prove_batch_bin
kairos-prover/profiling/: Cargo.toml  README.md  profile.pb
kairos-prover/risc0-types/: Cargo.toml
kairos-risc0-types/: Cargo.toml
kairos-risc0-types/src/: constants.rs  db.rs  lib.rs  tests.rs
kairos-server/: .env  Cargo.toml  README.md
kairos-server/src/: config.rs  errors.rs  lib.rs  main.rs  on_deploy.rs  state.rs  utils.rs
kairos-server/tests/: transactions.rs
kairos-service/: Cargo.toml
kairos-service/src/: main.rs
kairos-session-code/: Cargo.toml  rust-toolchain.toml
kairos-session-code/deposit-session/: Cargo.toml
kairos-session-code/malicious-reader/: Cargo.toml
kairos-session-code/malicious-session/: Cargo.toml
kairos-test-utils/: Cargo.toml
kairos-test-utils/src/: cctl.rs  kairos.rs  lib.rs  postgres.rs
kairos-test-utils/tests/: test_cctl_deploys_a_contract_successfully.rs  test_cctl_network_starts_and_terminates.rs
kairos-tx/: Cargo.toml  schema.asn
kairos-tx/src/: asn.rs  crypto.rs  error.rs  helpers.rs  lib.rs  parsers.rs
kairos-types/: Cargo.toml
kairos-types/src/: lib.rs  transactions.rs
layer-one-utils/: Cargo.toml
layer-one-utils/src/: constants.rs  deployments.rs  lib.rs
node/: .env  Cargo.toml  README.md  diesel.toml
node/src/: config.rs  errors.rs  main.rs  routes.rs
(+249 files in other folders)
