[workspace]
resolver = "2"

members = [
  "casper-deploy-notifier",
  "kairos-cli",
  "kairos-crypto",
  "kairos-server",
  "kairos-test-utils",
  "kairos-tx",
  "kairos-prover/kairos-circuit-logic",
  "demo-contract-tests",
  "kairos-contracts/demo-contract/contract-utils"
]

[workspace.package]
name = "kairos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
casper-client = "2.0"
casper-types = "4.0"
casper-client-types = { package = "casper-types", version = "3.0" }
casper-client-hashing = { package = "casper-hashing", version = "2.0" }
casper-contract = { version = "4.0", default-features = false }
casper-hashing = "3.0"
casper-event-standard = "0.5"
casper-event-toolkit = { git = "https://github.com/koxu1996/casper-event-toolkit", tag = "v0.1.3" }
