[workspace]
resolver = "2"

members = [
  "casper-deploy-notifier",
  "kairos-cli",
  "kairos-crypto",
  "kairos-server",
  "kairos-test-utils",
  "kairos-tx",
  "kairos-prover/kairos-circuit-logic",
  "demo-contract-tests",
  "kairos-contracts/demo-contract/contract-utils",
  "kairos-data"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
cctl-rs = { git = "https://github.com/cspr-rad/cctl-rs" }
casper-client = { git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "feat-track-node-2.0"}
casper-types= { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4", default-features = false }
casper-event-standard = { git = "https://github.com/cspr-rad/casper-event-standard", branch = "release-2.0.0-rc4" }
casper-event-toolkit = { git = "https://github.com/cspr-rad/casper-event-toolkit.git", branch = "node-2.0.0-rc4" }

# needed because of casper-client-rs still requiring an older casper-types version
[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
