[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version="1.36.0", features=["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }

kairos-risc0-types = { path="../kairos-risc0-types" }
methods = { path = "../methods" }
risc0-zkvm = "0.20.1"
env_logger = "0.11.2"
serde = { version="1.0.197", features=["derive"] }
serde_json = "1.0.114"