[package]
name = "casper-deploy-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[example]]
name = "echo_demo"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.11.26", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
casper-types.workspace = true
eventsource-stream = "0.2.3"
thiserror = "1.0"
base16 = "0.2.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
