[package]
name = "casper-deploy-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[example]]
name = "echo_demo"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
casper-types.workspace = true
eventsource-stream = "0.2"
thiserror = "1.0"
base16 = "0.2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
tracing-subscriber = "0.3"
