[package]
name = "casper-sse-client"
version.workspace = true
edition.workspace = true

[lib]

[[bin]]
name = "casper-sse-client"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.11.26", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
casper-types = "4.0.1"
eventsource-stream = "0.2.3"
