[workspace]
resolver = "2"

members = [
	"deposit-contract-tests", "verifier-contract-tests"
]

exclude = [
	"deposit-contracts",
	"verifier-contract"
]

[workspace.package]
name = "kairos-contract"
version = "0.1.0"
edition = "2021"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
