[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kairos-risc0-types = {path="../kairos-risc0-types", features=["tornado-tree"]}
chrono = { version = "0.4.26", features = ["serde"] }
bigdecimal = "0.4.3"
diesel = { version = "2.1", features = ["postgres", "chrono", "serde_json", "bigdecimal", "chrono", "num-traits", "num-bigint", "num-integer"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[print_schema]
file = "src/schema.rs"
custom_type_derives = ["diesel::query_builder::QueryId"]

[migrations_directory]
dir = "migrations"