[package]
name = "demo-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
# using a custom branch because it contains modifications to the chainspec that is pulled for integration tests
casper-engine-test-support = { git = "https://github.com/jonas089/casper-node", branch = "kairos-demo-chainspec", default-features=false }
casper-execution-engine = { git = "https://github.com/jonas089/casper-node", branch = "kairos-demo-chainspec", default-features=false }
casper-contract = { git = "https://github.com/jonas089/casper-node", branch = "kairos-demo-chainspec", default-features=false }
casper-types = { git = "https://github.com/jonas089/casper-node", branch = "kairos-demo-chainspec", default-features=false }
risc0-zkvm = {version="=0.21.0", default-features=false}
serde = {version="1", default-features=false, features=["derive"]}
kairos-trie = {git="https://github.com/cspr-rad/kairos-trie", default-features=false, features=["serde"]}
kairos-circuit-logic = {path="../kairos-prover/kairos-circuit-logic", features=["serde"]}
serde-json-wasm = "1"
rand = "0.8"
wasm-opt = "0.116"
sha2 = {version = "0.10", default-features = false}
