[package]
name = "demo-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
casper-engine-test-support = { version = "7.0.0", default-features = false }
casper-execution-engine = { version = "7.0.0", default-features = false }
casper-contract.workspace = true
casper-types = { workspace = true, default-features = false }
rand = "0.8"
wasm-opt = "0.116"
