[package]
name = "demo-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
# using a custom branch because it contains modifications to the chainspec that is pulled for integration tests
casper-engine-test-support = { git = "https://github.com/cspr-rad/casper-node", branch = "kairos-testing-chainspec", default-features=false }
casper-execution-engine = { git = "https://github.com/cspr-rad/casper-node", branch = "kairos-testing-chainspec", default-features=false }
casper-contract = { git = "https://github.com/cspr-rad/casper-node", branch = "kairos-testing-chainspec", default-features=false }
casper-types = { git = "https://github.com/cspr-rad/casper-node", branch = "kairos-testing-chainspec", default-features=false }
serde = {version="1", default-features=false, features=["derive"]}
kairos-verifier-risc0-lib = {path="../kairos-prover/kairos-verifier-risc0-lib"}
serde-json-wasm = "1"
rand = "0.8"
wasm-opt = "0.116"
sha2 = {version = "0.10", default-features = false}
