[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
kairos-risc0-types = {path="../kairos-risc0-types", features=["tornado-tree"]}
database = { path = "../database" }
methods = { path = "../methods" }
risc0-zkvm = "0.20.1"
env_logger = "0.11.2"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"