[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
kairos-risc0-types = {path="../kairos-risc0-types", features=["kairos-delta-tree"]}
casper-types = {git = "https://github.com/jonas089/casper-node", branch="kairos-1.5.6"}
methods = { path = "../methods" }
risc0-zkvm = {version="0.21.0", default-features=false, features=["prove"]}
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"