[package]
name = "kairos-circuit-logic"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"] 
std = []
serde = ["dep:serde", "kairos-trie/serde"]
asn1 = ["dep:kairos-tx"]

[dependencies]
kairos-tx = { path = "../kairos-tx", default-features = false, optional = true }
kairos-trie = { git = "https://github.com/cspr-rad/kairos-trie", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
