[[bin]]
name = "kairos-cli"
path = "bin/main.rs"
version = "0.1.0"
test = false
bench = false

[package]
name = "kairos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all-tests = ["cctl-tests"]
cctl-tests = []

[dependencies]
casper-client = "2"
casper-types = { version = "3", features = ["std"] } # TODO: Change `std` -> `std-fs-io` in the future version.
clap = { version = "4.5", features = ["derive", "deprecated"] }
hex = "0.4"
thiserror = "1"
kairos-crypto = { path = "../kairos-crypto", features = ["fs"] }
kairos-tx = { path = "../kairos-tx" }
kairos-server = { path = "../kairos-server" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"

[dev-dependencies]
tokio = { version = "1" }
assert_cmd = "2"
predicates = "3"
kairos-test-utils = { path = "../kairos-test-utils" }
casper-hashing = "2"
