[[bin]]
name = "kairos-cli"
path = "bin/main.rs"
version = "0.1.0"
test = false
bench = false

[package]
name = "kairos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["demo", "database"]
all-tests = ["cctl-tests", "database"]
cctl-tests = []
demo = ["dep:kairos-test-utils", "dep:tokio", "dep:dotenvy"]
database = ["dep:kairos-data", "dep:chrono", "kairos-server/database", "kairos-test-utils/database"]

[dependencies]
dotenvy = { version = "0.15", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
casper-client.workspace = true
casper-client-types = { workspace = true, features = ["std"] } # TODO: Change `std` -> `std-fs-io` in the future version.
cctl-rs.workspace = true
clap = { version = "4", features = ["derive", "deprecated"] }
chrono = { version = "0.4", optional = true }
hex = "0.4"
thiserror = "1"
kairos-crypto = { path = "../kairos-crypto", features = [ "std", "fs" ] }
kairos-data = { path = "../kairos-data", optional = true }
kairos-tx = { path = "../kairos-tx" }
kairos-server = { path = "../kairos-server" }
axum-extra = { version = "0.9", features = [ "typed-routing" ] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
kairos-test-utils = { path = "../kairos-test-utils", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = "1"
assert_cmd = "2"
predicates = "3"
kairos-test-utils = { path = "../kairos-test-utils" }
casper-client-hashing.workspace = true

[build-dependencies]
wasm-opt = "0.116"
