[package]
name = "kairos-common-types"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
