[package]
name = "kairos-contract-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-client = {git="https://github.com/cspr-rad/casper-client-rs", branch="kairos-feat-track-2.0"}
casper-types = {git = "https://github.com/cspr-rad/casper-node", branch="kairos-feat-2.0", features=["std"]}
contract-types = {path="../kairos-deposit-contract/kairos-deposit-contract/contract-types"}
serde_json = "1.0.114"
clap = {version="4.4.18", features=["derive"]}
tokio = {version="1.36.0", features=["full"]}
