[package]
name = "kairos-contract-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-client = {git="https://github.com/jonas089/casper-client-rs", branch="kairos-2.0"}
casper-types = {git="https://github.com/jonas089/casper-node", branch="kairos-2.0", features=["std"]}
kairos-risc0-types = {path="../kairos-risc0-types"}
serde_json = "1.0.114"
clap = {version="4.4.18", features=["derive"]}
tokio = {version="1.36.0", features=["full"]}
