[workspace]
resolver = "2"

members = [
  "demo-contract/contract",
  "demo-contract/contract-utils"
]

[workspace.package]
name = "kairos-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[profile.release]
codegen-units = 1
lto = true
debug = false
strip = true
opt-level = "z"
panic = "abort"
