[workspace]
resolver = "2"

members = [
  "demo-contract/contract",
  "demo-contract/contract-utils"
]

[workspace.package]
name = "kairos-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
debug = false
strip = true
opt-level = 'z'
panic = "abort"

[workspace.dependencies]
casper-contract = { version = "4.0", default-features = false }
casper-contract-no-std-helpers = { version = "0.1.0", "git" = "https://github.com/koxu1996/casper-contract-no-std-helpers"}
casper-types = { version = "4.0", default-features = false }
casper-event-standard = { version = "0.5", default-features = false }
