[workspace]
resolver = "2"

members = [
  "demo-contract/contract",
  "demo-contract/contract-utils"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
debug = false
strip = true
opt-level = 'z'
panic = "abort"

[workspace.dependencies]
casper-contract-no-std-helpers = { version = "0.1.0", "git" = "https://github.com/koxu1996/casper-contract-no-std-helpers" }
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4", default-features = false }
casper-types= { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
casper-event-standard = { git = "https://github.com/cspr-rad/casper-event-standard", branch = "release-2.0.0-rc4" }

