[package]
name = "kairos-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["crypto-casper", "tx"]
crypto-casper = ["casper-types"]
tx = ["kairos-tx"]
fs = ["casper-types/std"] # TODO: Change `std` -> `std-fs-io` in the future version.

[lib]

[dependencies]
hex = "0.4"
thiserror = "1"
kairos-tx = { path = "../kairos-prover/kairos-tx", optional = true }

# Casper signer implementation.
casper-types = { version = "4", optional = true }
