[package]
name = "kairos-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "numeric"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres", "tracing"]}
diesel_migrations = { version = "2.1.0", features = ["postgres"], optional = true }
tokio = "1.37.0"
tracing = "0.1.40"
thiserror = "1.0.34"
deadpool = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0.117"
serde = "1.0.201"
kairos-circuit-logic = { path = "../kairos-prover/kairos-circuit-logic", features = ["serde", "asn1"] }
hex = "0.4.3"
anyhow = "1.0.86"

[features]
migrations = ["diesel_migrations"]
