[package]
name = "kairos-deposit-contract-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
casper-engine-test-support = {git = "https://github.com/cspr-rad/casper-node", branch="kairos-feat-2.0", default-features=false}
casper-execution-engine = {git = "https://github.com/cspr-rad/casper-node", branch="kairos-feat-2.0", default-features=false}
casper-contract = {git = "https://github.com/cspr-rad/casper-node", branch="kairos-feat-2.0", default-features=false}
casper-types = {git = "https://github.com/cspr-rad/casper-node", branch="kairos-feat-2.0", default-features=false}

[[test]]
name = "kairos_contract_tests"
path = "src/integration_tests.rs"
