[package]
name = "kairos-l1-state-replicator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[bin]]
name = "kairos-l1-state-replicator"

[dependencies]
casper-client = "2.0.0"
casper-event-standard = "0.4.1"
casper-types = "3.0.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
