[package]
name = "kairos-l1-state-replicator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[example]]
name = "cep78_demo"

[dependencies]
casper-client = "2.0.0"
casper-event-standard = "0.4.1"
casper-types = "3.0.0"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
