[package]
name = "kairos-l1-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
casper-client = {git="https://github.com/casper-ecosystem/casper-client-rs", branch="release-2.0.0"}
casper-types = "3.0.0"
casper-hashing = "2.0.0"
tokio = {version="1.36.0", features=["full"]}

[features]
all-tests = ["cctl-tests"]
cctl-tests = []

[dev-dependencies]
anyhow = "*"
kairos-test-utils = { path  = "../kairos-test-utils" }
backoff = { version = "0.4", features = ["tokio", "futures"]}
