[workspace]
resolver = "2"
members = [
    "kairos-prover-risc0-server",
    "kairos-verifier-risc0-lib",
    "kairos-circuit-logic",
    "methods",
    "profiling",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = 3

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
