[package]
name = "kairos-risc0-types"
version = "0.1.0"
edition = "2021"

[dependencies]
#risc0-zkvm = "0.20.1"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
kairos-delta-tree = {path="../kairos-delta-tree", optional=true}
casper-types = {git = "https://github.com/jonas089/casper-node", branch="kairos-2.0"}
chrono = {version="0.4.35", features = ["serde"]}

[features]