[package]
name = "kairos-risc0-types"
version = "0.1.0"
edition = "2021"

[dependencies]
#risc0-zkvm = "0.20.1"
serde = {version="1.0.197", features=["derive"]}
serde-json-wasm = "1.0.1"
kairos-delta-tree = {path="../kairos-delta-tree", optional=true}
casper-types = {git = "https://github.com/jonas089/casper-node", branch="kairos-1.5.6"}

[features]