[package]
name = "kairos-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[bin]]
name = "kairos-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cctl-tests", "deposit-mock"]
all-tests = ["cctl-tests", "deposit-mock"]
cctl-tests = []
deposit-mock = []

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = [
    "typed-routing",
    "typed-header",
    "json-deserializer",
] }
anyhow = "1"
backoff = { version = "0.4", features = ["tokio", "futures"]}
casper-client.workspace = true
casper-client-hashing.workspace = true
casper-types.workspace = true
casper-deploy-notifier = { path = "../casper-deploy-notifier" }
casper-event-standard.workspace = true
casper-event-toolkit.workspace = true
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
hex = "0.4"
kairos-tx = { path = "../kairos-tx" }
contract-utils = { path = "../kairos-contracts/demo-contract/contract-utils" }
kairos-circuit-logic = { path = "../kairos-prover/kairos-circuit-logic", features = ["serde", "asn1"] }
kairos-trie = { git = "https://github.com/cspr-rad/kairos-trie" }
sha2 = "0.10"
reqwest = "0.12"
thiserror = "1.0"

[dev-dependencies]
proptest = "1"
axum-test = "14"
kairos-test-utils = { path = "../kairos-test-utils" }
casper-client-types.workspace = true
