[package]
name = "kairos-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[bin]]
name = "kairos-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO readd database to default features once we have a nix module for postgres
default = ["cctl-tests", "deposit-mock"]
all-tests = ["cctl-tests", "deposit-mock", "database"]
cctl-tests = []
deposit-mock = []
database = ["kairos-data", "kairos-test-utils/database"]

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = [
    "typed-routing",
    "typed-header",
    "json-deserializer",
] }
anyhow = "1"
casper-client.workspace = true
casper-client-types = { workspace = true, features = ["std"] } # TODO: Change `std` -> `std-fs-io` in the future version.
casper-types.workspace = true
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
hex = "0.4"
kairos-tx = { path = "../kairos-tx" }
contract-utils = { path = "../kairos-contracts/demo-contract/contract-utils" }
kairos-circuit-logic = { path = "../kairos-prover/kairos-circuit-logic", features = ["serde", "asn1", "casper-event-standard"] }
kairos-trie = { git = "https://github.com/cspr-rad/kairos-trie" }
kairos-data = { path = "../kairos-data", features = ["migrations"], optional = true }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
casper-event-toolkit = { git = "https://github.com/koxu1996/casper-event-toolkit.git", version = "0.1.3" }
thiserror = "1.0"
chrono = "0.4.38"
risc0-zkvm = { version="1.0", default-features=false }
backoff = { version = "0.4", features = ["tokio", "futures"]}

[dev-dependencies]
proptest = "1"
axum-test = "14"
kairos-test-utils = { path = "../kairos-test-utils" }
casper-client-types.workspace = true
cctl-rs.workspace = true
