[package]
name = "kairos-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["database"]
all-tests = ["database"]
database = ["kairos-server/database"]

[lib]

[dependencies]

backoff = { version = "0.4", features = ["tokio", "futures"]}
casper-client-types.workspace = true
percent-encoding = "2.3"
tokio = { version = "1", features = [ "full", "tracing", "macros" ] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
kairos-server = { path = "../kairos-server" }
