[package]
name = "kairos-tx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rasn = { version = "0.14", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = []
