[package]
name = "kairos-tx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rasn = { version = "0.14", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = []
