[package]
name = "kairos-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
kairos-tx = { path = "../kairos-tx" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
